ct-transpiler/testsuite/good/TyVarInDecl/TyVarInDecl.hs
{-# LANGUAGE ComposableTypes #-}

module TyVarInDecl where

piececategory A

data piece A ==> B = C

d -: A -> e

